@@ -61,6 +61,7 @@ All:
   functions. See wxGetOsVersion(), wxPlatformInfo, and wxAppTraits.
 - wxLogInfo() now logs messages if the log level is high enough, even without
   wxLog::SetVerbose() which now only affects wxLogVerbose().
+- Add wxFileType::GetExpandedCommand() (troelsk).
 
 wxMSW:
 
